==> davewhiiite/uvc/firmware/uvc_controller/mbed-os/features/netsocket/emac-drivers/TARGET_Freescale_EMAC/kinetis_emac.cpp <==
#include <ctype.h>
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include "cmsis_os.h"
#include "mbed_interface.h"
#include "mbed_assert.h"
#include "netsocket/nsapi_types.h"
#include "mbed_shared_queues.h"
#include "fsl_phy.h"
#include "kinetis_emac_config.h"
#include "kinetis_emac.h"
#include "mbed_power_mgmt.h"
#define ENET_BuffSizeAlign(n) ENET_ALIGN(n, ENET_BUFF_ALIGNMENT)
#define ENET_ALIGN(x,align)   ((unsigned int)((x) + ((align)-1)) & (unsigned int)(~(unsigned int)((align)- 1)))
#define FLAG_TX  1
#define FLAG_RX  2
#define THREAD_PRIORITY (osPriorityNormal)
#define PHY_TASK_PERIOD      200ms

emac_mem_buf_t *Kinetis_EMAC::low_level_input(int idx)
{
    volatile enet_rx_bd_struct_t *bdPtr = g_handle.rxBdCurrent;
    emac_mem_buf_t *p = NULL;
    emac_mem_buf_t *temp_rxbuf = NULL;
    uint32_t length = 0;
    const uint16_t err_mask = ENET_BUFFDESCRIPTOR_RX_TRUNC_MASK | ENET_BUFFDESCRIPTOR_RX_CRC_MASK |
                              ENET_BUFFDESCRIPTOR_RX_NOOCTET_MASK | ENET_BUFFDESCRIPTOR_RX_LENVLIOLATE_MASK;

#ifdef LOCK_RX_THREAD
    /* Get exclusive access */
    TXLockMutex.lock();
#endif

    /* Determine if a frame has been received */
    if ((bdPtr->control & err_mask) != 0) {
        /* Re-use the same buffer in case of error */
        update_read_buffer(NULL);
    } else {
        /* A packet is waiting, get length */
        length = bdPtr->length;

        /* Zero-copy */
        p = rx_buff[idx];
        memory_manager->set_len(p, length);

        /* Attempt to queue new buffer */
        temp_rxbuf = memory_manager->alloc_heap(ENET_ETH_MAX_FLEN, ENET_BUFF_ALIGNMENT);
        if (NULL == temp_rxbuf) {
            /* Re-queue the same buffer */
            update_read_buffer(NULL);

#ifdef LOCK_RX_THREAD
            TXLockMutex.unlock();
#endif

            return NULL;
        }

        rx_buff[idx] = temp_rxbuf;
        rx_ptr[idx] = (uint32_t *)memory_manager->get_ptr(rx_buff[idx]);

        update_read_buffer((uint8_t *)rx_ptr[idx]);
    }

#ifdef LOCK_RX_THREAD
    osMutexRelease(TXLockMutex);
#endif

    return p;
}

void Kinetis_EMAC::thread_function(void *pvParameters)
{
    struct Kinetis_EMAC *kinetis_enet = static_cast<Kinetis_EMAC *>(pvParameters);

    for (;;) {
        uint32_t flags = osThreadFlagsWait(FLAG_RX | FLAG_TX, osFlagsWaitAny, osWaitForever);

        MBED_ASSERT(!(flags & osFlagsError));

        if (flags & FLAG_RX) {
            kinetis_enet->packet_rx();
        }

        if (flags & FLAG_TX) {
            kinetis_enet->packet_tx();
        }
    }
}

bool Kinetis_EMAC::link_out(emac_mem_buf_t *buf)
{
    // If buffer is chained or not aligned then make a contiguous aligned copy of it
    if (memory_manager->get_next(buf) ||
            reinterpret_cast<uint32_t>(memory_manager->get_ptr(buf)) % ENET_BUFF_ALIGNMENT) {
        emac_mem_buf_t *copy_buf;
        copy_buf = memory_manager->alloc_heap(memory_manager->get_total_len(buf), ENET_BUFF_ALIGNMENT);
        if (NULL == copy_buf) {
            memory_manager->free(buf);
            return false;
        }

        // Copy to new buffer and free original
        memory_manager->copy(copy_buf, buf);
        memory_manager->free(buf);
        buf = copy_buf;
    }

    /* Check if a descriptor is available for the transfer (wait 10ms before dropping the buffer) */
    if (!xTXDCountSem.try_acquire_for(10)) {
        memory_manager->free(buf);
        return false;
    }

    /* Get exclusive access */
    TXLockMutex.lock();

    /* Save the buffer so that it can be freed when transmit is done */
    tx_buff[tx_produce_index % ENET_TX_RING_LEN] = buf;
    tx_produce_index += 1;

    /* Setup transfers */
    g_handle.txBdCurrent->buffer = static_cast<uint8_t *>(memory_manager->get_ptr(buf));
    g_handle.txBdCurrent->length = memory_manager->get_len(buf);
    g_handle.txBdCurrent->control |= (ENET_BUFFDESCRIPTOR_TX_READY_MASK | ENET_BUFFDESCRIPTOR_TX_LAST_MASK);

    /* Increase the buffer descriptor address. */
    if (g_handle.txBdCurrent->control & ENET_BUFFDESCRIPTOR_TX_WRAP_MASK) {
        g_handle.txBdCurrent = g_handle.txBdBase;
    } else {
        g_handle.txBdCurrent++;
    }

    /* Active the transmit buffer descriptor. */
    ENET->TDAR = ENET_TDAR_TDAR_MASK;

    /* Restore access */
    TXLockMutex.unlock();

    return true;
}

void Kinetis_EMAC::phy_task()
{
    uint32_t phyAddr = 0;

    // Get current status
    PHY_STATE crt_state;
    bool connection_status;
    PHY_GetLinkStatus(ENET, phyAddr, &connection_status);

    if (connection_status) {
        crt_state.connected = STATE_LINK_UP;
    } else {
        crt_state.connected = STATE_LINK_DOWN;
    }

    if (crt_state.connected == STATE_LINK_UP) {
        if (prev_state.connected != STATE_LINK_UP) {
            PHY_AutoNegotiation(ENET, phyAddr);
        }

        PHY_GetLinkSpeedDuplex(ENET, phyAddr, &crt_state.speed, &crt_state.duplex);

        if (prev_state.connected != STATE_LINK_UP || crt_state.speed != prev_state.speed) {
            /* Poke the registers*/
            ENET_SetMII(ENET, (enet_mii_speed_t)crt_state.speed, (enet_mii_duplex_t)crt_state.duplex);
        }
    }

    // Compare with previous state
    if (crt_state.connected != prev_state.connected && emac_link_state_cb) {
        emac_link_state_cb(crt_state.connected);
    }

    prev_state = crt_state;
}

bool Kinetis_EMAC::power_up()
{
    /* Initialize the hardware */
    if (!low_level_init_successful()) {
        return false;
    }

    // Can't enter deep sleep as long as Ethernet is active
    sleep_manager_lock_deep_sleep();

    /* Worker thread */
    thread = create_new_thread("Kinetis_EMAC_thread", &Kinetis_EMAC::thread_function, this, THREAD_STACKSIZE, THREAD_PRIORITY, &thread_cb);

    /* Trigger thread to deal with any RX packets that arrived before thread was started */
    rx_isr();

    /* PHY monitoring task */
    prev_state.connected = STATE_LINK_DOWN;
    prev_state.speed = (phy_speed_t)STATE_UNKNOWN;
    prev_state.duplex = (phy_duplex_t)STATE_UNKNOWN;

    mbed::mbed_event_queue()->call(mbed::callback(this, &Kinetis_EMAC::phy_task));

    /* Allow the PHY task to detect the initial link state and set up the proper flags */
    osDelay(10);

    phy_task_handle = mbed::mbed_event_queue()->call_every(PHY_TASK_PERIOD, mbed::callback(this, &Kinetis_EMAC::phy_task));

    return true;
}

uint32_t Kinetis_EMAC::get_mtu_size() const
{
    return KINETIS_ETH_MTU_SIZE;
}

void Kinetis_EMAC::get_ifname(char *name, uint8_t size) const
{
    memcpy(name, KINETIS_ETH_IF_NAME, (size < sizeof(KINETIS_ETH_IF_NAME)) ? size : sizeof(KINETIS_ETH_IF_NAME));
}

uint8_t Kinetis_EMAC::get_hwaddr_size() const
{
    return KINETIS_HWADDR_SIZE;
}
