==> davewhiiite/uvc/firmware/uvc_controller/mbed-os/features/netsocket/emac-drivers/TARGET_GD_EMAC/gd32xx_emac.cpp <==
#include <stdlib.h>
#include "cmsis_os.h"
#include "mbed_interface.h"
#include "mbed_assert.h"
#include "mbed_shared_queues.h"
#include "netsocket/nsapi_types.h"
#include "gd32xx_emac.h"
#define _ENET_FLAG_RX                       (1)
#define _THREAD_STACKSIZE                   (512)
#define _THREAD_PRIORITY                    (osPriorityHigh)
#define _PHY_TASK_PERIOD                    (200ms)
#define _ENET_HW_ADDR_SIZE                  (6)
#define _ENET_MTU_SIZE                      (1500)
#define _ENET_IF_NAME                       "gd"
#define _ENET_BOARD_PHY_ADDRESS             (0x01)
#define _ENET_HARDWARE_CHECKSUM             (0)
#define _GD_MAC_ADDR0                       0x02
#define _GD_MAC_ADDR1                       0xaa
#define _GD_MAC_ADDR2                       0xbb
#define _GD32_ID_ADDR                       0x1FFFF7E8

bool GD32_EMAC::link_out(emac_mem_buf_t *buf)
{
    emac_mem_buf_t *q;
    uint8_t *buffer;
    uint16_t framelength = 0;

    /* Get exclusive access */
    TXLockMutex.lock();

    while ((uint32_t)RESET != (dma_current_txdesc->status & ENET_TDES0_DAV)) {}

    /* copy frame from pbufs to driver buffers */
    buffer = reinterpret_cast<uint8_t *>(enet_desc_information_get(dma_current_txdesc, TXDESC_BUFFER_1_ADDR));

    for (q = buf; q != NULL; q = memory_manager->get_next(q)) {
        memcpy(static_cast<uint8_t *>(&buffer[framelength]), static_cast<uint8_t *>(memory_manager->get_ptr(q)), memory_manager->get_len(q));
        framelength = framelength + memory_manager->get_len(q);
    }

    /* Prepare transmit descriptors to give to DMA */
    if (SUCCESS != ENET_NOCOPY_FRAME_TRANSMIT(framelength)) {
        while (1);
    }

    memory_manager->free(buf);
    /* Restore access */
    TXLockMutex.unlock();

    return true;
}

emac_mem_buf_t *GD32_EMAC::low_level_input(void)
{
    emac_mem_buf_t *p = NULL, *q;
    uint32_t l = 0;
    uint16_t len;
    uint8_t *buffer;

    /* obtain the size of the packet and put it into the "len" variable. */
    len = enet_desc_information_get(dma_current_rxdesc, RXDESC_FRAME_LENGTH);
    buffer = reinterpret_cast<uint8_t *>(enet_desc_information_get(dma_current_rxdesc, RXDESC_BUFFER_1_ADDR));

    if (len > 0) {
        /* Allocate a memory buffer chain from buffer pool */
        p = memory_manager->alloc_pool(len, 0);
    } else {
        return p;
    }

    if (p != NULL) {
        for (q = p; q != NULL; q = memory_manager->get_next(q)) {
            memcpy(static_cast<uint8_t *>(memory_manager->get_ptr(q)), static_cast<uint8_t *>(&buffer[l]), memory_manager->get_len(q));
            l = l + memory_manager->get_len(q);
        }
    }
    ENET_NOCOPY_FRAME_RECEIVE();

    return p;
}

void GD32_EMAC::thread_function(void *pvParameters)
{
    static struct GD32_EMAC *gd32_enet = static_cast<GD32_EMAC *>(pvParameters);

    while (1) {
        uint32_t flags = osThreadFlagsWait(_ENET_FLAG_RX, osFlagsWaitAny, osWaitForever);

        if (flags & _ENET_FLAG_RX) {
            gd32_enet->packet_rx();
        }
    }
}

void GD32_EMAC::phy_task()
{
    uint16_t regval;

    enet_phy_write_read(ENET_PHY_READ, _ENET_BOARD_PHY_ADDRESS, PHY_REG_BSR, &regval);
    if (emac_link_state_cb) {
        regval &= PHY_LINKED_STATUS;

        if (phy_status != regval) {
            if (regval == PHY_LINKED_STATUS) {
                emac_link_state_cb(true);;
            } else {
                emac_link_state_cb(false);
            }
        }
    }

    phy_status = regval;
}

bool GD32_EMAC::power_up()
{
    /* Initialize the hardware */
    if (true != low_level_init()) {
        return false;
    }

    /* Worker thread */
    rx_thread = create_new_thread("gd32_emac_thread", &GD32_EMAC::thread_function, this, _THREAD_STACKSIZE, _THREAD_PRIORITY, &rx_thread_cb);

    phy_task_handle = mbed::mbed_event_queue()->call_every(_PHY_TASK_PERIOD, mbed::callback(this, &GD32_EMAC::phy_task));

    /* Allow the PHY task to detect the initial link state and set up the proper flags */
    osDelay(10);

    eth_arch_enable_interrupts();

    return true;
}

uint32_t GD32_EMAC::get_mtu_size() const
{
    return _ENET_MTU_SIZE;
}

void GD32_EMAC::get_ifname(char *name, uint8_t size) const
{
    memcpy(name, _ENET_IF_NAME, (size < sizeof(_ENET_IF_NAME)) ? size : sizeof(_ENET_IF_NAME));
}

uint8_t GD32_EMAC::get_hwaddr_size() const
{
    return _ENET_HW_ADDR_SIZE;
}
